--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/CategoryItem/Index.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/CategoryItem/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DeveloperDOtnetStoreProject.Models.ProductAddOns.TechnicalReview.CategoryItemModel>
+﻿@model IEnumerable<DeveloperDOtnetStoreProject.Models.Product.AddOn.TechnicalReview.CategoryItemModel>
 @{
     ViewBag.Title = "Index";
 }
