--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Content/bootstrap.css
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Content/bootstrap.css
@@ -4282,6 +4282,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   .navbar-nav > li > a {
     padding-top: 15px;
     padding-bottom: 15px;
+    padding-left: 5em;
   }
 }
 
