--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Product/Create.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Product/Create.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Create Product</h2>
 
 <div class="container">
     @using (Html.BeginForm())
