--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Product/Create.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Product/Create.cshtml
@@ -25,6 +25,11 @@
             @Html.Label("Storage Count", new { @class = "control-label" })
             @Html.TextBoxFor(t => t.QuantityStorage, new { @class = "form-control" })
         </div>
+        <div class="form-group">
+            @Html.Label("CategoryModelId", new { @class = "control-label" })
+            @Html.TextBoxFor(t => t.CategoryHeaderModelId, new { @class = "form-control" })
+        </div>
+
         /*<div class="form-group">
             <!--<label>Firstname</label>-->
             @Html.LabelFor(m => m.Firstname, new { @class = "col-md-2 control-label" })
@@ -37,7 +42,7 @@
         <input type="submit" value="Create" class="btn btn-primary" id="Create" />
     }
 
-    <div>
+    <div style="margin: 10px">
         @Html.ActionLink("Back to List", "Index")
     </div>
 
