User update(still under development)

--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/User/Create.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/User/Create.cshtml
@@ -9,7 +9,7 @@
 <div class="jumbotron">
     @using (Html.BeginForm())
     {
-        @Html.Partial("_CreateEdit")
+        @Html.Partial("_CreateUpdate")
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
