--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Account/Register.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Account/Register.cshtml
@@ -29,6 +29,17 @@
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
+
+
+    <div class="form-group">
+        @Html.Label("Select Your User Type", new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.Role, Model.Rolelist)
+        </div>
+    </div>
+
+    @Html.Partial("_CreateUpdate")
+
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
