--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/User/Delete.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/User/Delete.cshtml
@@ -1,3 +1,26 @@
 ﻿@model DeveloperDOtnetStoreProject.Models.User.UserModel
 
+@{
+    ViewBag.Title = "Delete";
+}
 
+<h2>Delete</h2>
+
+<h3>Are you sure you want to delete this?</h3>
+<div>
+    <h4>User</h4>
+    <hr />
+    <div class="jumbotron">
+        @using (Html.BeginForm())
+        {
+            @Html.Partial("_DetailsOrDelete")
+
+            @Html.AntiForgeryToken()
+
+            <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
+            </div>
+        }
+    </div>
+</div>
