--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/User/Edit.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/User/Edit.cshtml
@@ -11,7 +11,7 @@
     {
         @Html.HiddenFor(a => a.Id)
 
-        @Html.Partial("_CreateEdit")
+        @Html.Partial("_CreateUpdate")
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
