--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Shared/_CreateUpdate.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Shared/_CreateUpdate.cshtml
@@ -34,3 +34,17 @@
         @Html.TextBoxFor(a => a.City, new { @class = "form-control" })
     </div>
 </div>
+
+<div class="form-group">
+    @Html.LabelFor(a => a.Email, new { @class = "col-md-2 control-label" })
+    <div class="col-md-10">
+        @Html.TextBoxFor(a => a.Email, new { @class = "form-control" })
+    </div>
+</div>
+
+<div class="form-group">
+    @Html.LabelFor(a => a.Password, new { @class = "col-md-2 control-label" })
+    <div class="col-md-10">
+        @Html.TextBoxFor(a => a.Password, new { @class = "form-control" })
+    </div>
+</div>
