--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Content/bootstrap.css
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Content/bootstrap.css
@@ -4959,8 +4959,9 @@ a.badge:focus {
   padding-top: 30px;
   padding-bottom: 30px;
   margin-bottom: 30px;
+  line-height: 2.1428571435;
   color: inherit;
-  background-color: #eee;
+  background-color: #eeeeee;
 }
 .jumbotron h1,
 .jumbotron .h1 {
