--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Shared/_CreateUpdate.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Shared/_CreateUpdate.cshtml
@@ -45,6 +45,6 @@
 <div class="form-group">
     @Html.LabelFor(a => a.Password, new { @class = "col-md-2 control-label" })
     <div class="col-md-10">
-        @Html.TextBoxFor(a => a.Password, new { @class = "form-control" })
+        @Html.PasswordFor(a => a.Password, new { @class = "form-control" })
     </div>
 </div>
