--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/User/Delete.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/User/Delete.cshtml
@@ -10,7 +10,7 @@
 <div>
     <h4>User</h4>
     <hr />
-    <div class="jumbotron">
+    <div class="">
         @using (Html.BeginForm())
         {
             @Html.Partial("_DetailsOrDelete")
