--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/User/Edit.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/User/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Edit</h2>
 
-<div class="jumbotron">
+<div class="">
     @using (Html.BeginForm())
     {
         @Html.HiddenFor(a => a.Id)
