--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/User/Create.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/User/Create.cshtml
@@ -6,9 +6,11 @@
 
 <h2>Create</h2>
 
-<div class="jumbotron">
+<div class="">
     @using (Html.BeginForm())
     {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary("", new { @class = "text-danger" })
         @Html.Partial("_CreateUpdate")
 
         <div class="form-group">
