Done wrok to: ! - ProductController - Added a method called addNewCategoryHeader() ! - ProductCreateViewModel Added ! - Implementet in Views/Product/Edit.cshtml ! - ProductCreateView: Is Just for Test purpose for a DropownList

--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Product/Index.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Product/Index.cshtml
@@ -35,7 +35,7 @@
             @Html.DisplayNameFor(model => model.Reviews)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TechnicalSpecifications)
+            @*Html.DisplayNameFor(model => model.TechnicalSpecifications)*@
         </th>
         <th>
             @Html.DisplayName("Options")
@@ -57,7 +57,7 @@
 
             <td>@Html.DisplayFor(holder => itemData.Reviews)</td>
 
-            <td>@Html.DisplayFor(holder => itemData.TechnicalSpecifications)</td>
+            <td>@*Html.DisplayFor(holder => itemData.TechnicalSpecifications)*@</td>
 
             <td>
                 @if (Context.User.Identity.IsAuthenticated)
