--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/User/Create.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/User/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model DeveloperDOtnetStoreProject.Models.User.UserModel
+﻿@model DeveloperDOtnetStoreProject.Models.ApplicationUser
 
 @{
     ViewBag.Title = "Create";
