--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Shared/_CreateUpdate.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Shared/_CreateUpdate.cshtml
@@ -1,50 +1,66 @@
-﻿@model DeveloperDOtnetStoreProject.Models.User.UserModel
+﻿@model DeveloperDOtnetStoreProject.Models.RegisterViewModel
 
 <div class="form-group">
-    @Html.LabelFor(a => a.FirstName, new { @class = "col-md-2 control-label" })
+    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
     <div class="col-md-10">
-        @Html.TextBoxFor(a => a.FirstName, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+    </div>
+</div>
+<div class="form-group">
+    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+    <div class="col-md-10">
+        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+    </div>
+</div>
+<div class="form-group">
+    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+    <div class="col-md-10">
+        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
     </div>
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(a => a.LastName, new { @class = "col-md-2 control-label" })
+    @if (ViewContext.HttpContext.User.IsInRole("Administrator"))
+    {
+        @Html.Label("Select Your User Type", new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.Role, Model.Rolelist)
+        </div>
+    }
+</div>
+
+<div class="form-group">
+    @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
     <div class="col-md-10">
-        @Html.TextBoxFor(a => a.LastName, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
     </div>
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(a => a.Address, new { @class = "col-md-2 control-label" })
+    @Html.LabelFor(m => m.LastName, new { @class = "col-md-2 control-label" })
     <div class="col-md-10">
-        @Html.TextBoxFor(a => a.Address, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
     </div>
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(a => a.PostalCode, new { @class = "col-md-2 control-label" })
+    @Html.LabelFor(m => m.Address, new { @class = "col-md-2 control-label" })
     <div class="col-md-10">
-        @Html.TextBoxFor(a => a.PostalCode, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Address, new { @class = "form-control" })
     </div>
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(a => a.City, new { @class = "col-md-2 control-label" })
+    @Html.LabelFor(m => m.PostalCode, new { @class = "col-md-2 control-label" })
     <div class="col-md-10">
-        @Html.TextBoxFor(a => a.City, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.PostalCode, new { @class = "form-control" })
     </div>
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(a => a.Email, new { @class = "col-md-2 control-label" })
+    @Html.LabelFor(m => m.City, new { @class = "col-md-2 control-label" })
     <div class="col-md-10">
-        @Html.TextBoxFor(a => a.Email, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.City, new { @class = "form-control" })
     </div>
 </div>
-
-<div class="form-group">
-    @Html.LabelFor(a => a.Password, new { @class = "col-md-2 control-label" })
-    <div class="col-md-10">
-        @Html.PasswordFor(a => a.Password, new { @class = "form-control" })
-    </div>
-</div>
+}
