--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Shared/_LoginPartial.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Shared/_LoginPartial.cshtml
@@ -17,7 +17,7 @@ else
 {
 
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("TILMELD DIG", "Create", "User", routeValues: null, htmlAttributes: new { id = "registerCustomerLink" })</li>
+        <li>@Html.ActionLink("TILMELD DIG", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
         <li>@Html.ActionLink("LOG IND", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
