getting better now

--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Account/Index.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Account/Index.cshtml
@@ -9,7 +9,7 @@
 @if (ViewContext.HttpContext.User.IsInRole("Administrator"))
 {
     <p>
-        @Html.ActionLink("Create New", "Create")
+        @Html.ActionLink("Create New", "Register")
     </p>
 }
 
