--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Account/Register.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Account/Register.cshtml
@@ -16,9 +16,11 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <input type="submit" class="btn btn-primary" value="Register" />
         </div>
     </div>
+
+    @Html.ActionLink("Back to List", "Index")
 }
 
 @section Scripts {
