--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Role/Create.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Role/Create.cshtml
@@ -1,14 +1,13 @@
 ﻿@model Microsoft.AspNet.Identity.EntityFramework.IdentityRole
 
-@{ 
+@{
     ViewBag.Title = "Create";
 }
 
 <h2>Brugertype</h2>
 
 <style type="text/css">
-    #tbrole, .c
-    {
+    #tbrole, .c {
         border: hidden;
     }
 </style>
@@ -28,7 +27,7 @@
     </div>
 
     <div class="form-group">
-            <input type="submit" value="Create Role" class="btn btn-primary"/>
+        <input type="submit" value="Create Role" class="btn btn-primary" />
     </div>
 
     <div>
