--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Account/Edit.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Account/Edit.cshtml
@@ -9,23 +9,9 @@
 <div class="">
     @using (Html.BeginForm())
     {
-
+        @Html.AntiForgeryToken()
         @Html.HiddenFor(u => u.Id)
         @Html.ValidationSummary("", new { @class = "text-danger" })
-
-        <div class="form-group">
-            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(m => m.PasswordHash, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.PasswordHash, new { @class = "form-control" })
-            </div>
-        </div>
 
         <div class="form-group">
             @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
