--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Shared/_Create.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Shared/_Create.cshtml
@@ -19,12 +19,15 @@
     </div>
 </div>
 
-<div class="form-group">
-    @Html.Label("Select Your User Type", new { @class = "col-md-2 control-label" })
-    <div class="col-md-10">
-        @Html.DropDownListFor(model => model.Role, Model.Rolelist)
+@if (ViewContext.HttpContext.User.IsInRole("Administrator"))
+{
+    <div class="form-group">
+        @Html.Label("Select Your User Type", new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.Role, Model.Rolelist)
+        </div>
     </div>
-</div>
+}
 
 <div class="form-group">
     @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
