--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Content/Site.less
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Content/Site.less
@@ -1,98 +1,125 @@
-﻿body {
-  padding-top: 50px;
-  padding-bottom: 20px;
+﻿@error-color: red;
+@color-black: black;
+@color-white: white;
+@color-bodyMenuBG: #ebe9e9;
+@color-hardwareMenuBG: #f1f1f1;
+@color-grey: grey;
+@color-jumbotron: #eeeeee;
+@color-btn: #0060ac;
+
+
+body {
+    padding-top: 50px;
+    padding-bottom: 20px;
 }
+
 /* Set padding to keep content from hitting the edges */
 .body-content {
-  padding-left: 15px;
-  padding-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
+
+
+
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
 .dl-horizontal dt {
-  white-space: normal;
+    white-space: normal;
 }
+
 /* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
 textarea {
-  max-width: 280px;
+    max-width: 280px;
+    
 }
+
 /* Link that black */
-.itemLongLink:link,
-.itemLongLink:hover,
-.itemLongLink:visited,
-.itemLongLink:active {
-  color: black;
+.itemLongLink:link, .itemLongLink:hover, .itemLongLink:visited, .itemLongLink:active {
+    color: @color-black;
 }
+
 .testBorder {
-  border: 1px solid black;
+    border: 1px solid @color-black;
 }
+
 .fixedItemSize {
-  height: 100px;
+    height: 100px;
 }
+
 .temp {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 .BottomTxtDiv {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  vertical-align: middle;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
 }
+
 /* Menu to Hardware Body */
 /* Div surrounding Menu Header */
 .productHeaderMenu {
-  height: 35px;
-  /*border: 1px solid black;*/
-  padding-top: 6px;
-  padding-left: 14px;
-  font-weight: bold;
+    height: 35px;
+    /*border: 1px solid black;*/
+    padding-top: 6px;
+    padding-left: 14px;
+    font-weight: bold;
 }
+
 .hardwareMenu {
-  list-style-type: none;
-  margin-bottom: 0;
-  padding: 0;
+    list-style-type: none;
+    margin-bottom: 0;
+    padding: 0;
 }
+
 .hardwareMenu li {
-  background-color: #f1f1f1;
-  color: black;
-  padding: 5px 16px 5px 10px;
-  margin-bottom: 2px;
-  text-decoration: none;
+    background-color: @color-hardwareMenuBG;
+    color: @color-black;
+    padding: 5px 16px 5px 10px;
+    margin-bottom: 2px;
+    text-decoration: none;
 }
+
 .hardwareMenu li a {
-  display: block;
-  color: black;
-  width: 100%;
-  padding: 4px;
-  text-decoration: none;
+    display: block;
+    color: @color-black;
+    width: 100%;
+    padding: 4px;
+    text-decoration: none;
 }
+
 /* A link called by classname and added:hover */
 .categgoryBodyMenu:hover {
-  background-color: #ebe9e9;
-  color: black;
-  text-decoration: underline;
+    background-color: @color-bodyMenuBG;
+    color: @color-black;
+    text-decoration: underline;   
 }
+
 /* 
     Product List Content is placed here 
 */
 .productContent {
-  margin-top: 10px;
+    margin-top: 10px;
 }
+
 /* Product Hover */
 .hoverBorder:hover {
-  border: 1px solid grey;
+    border: 1px solid @color-grey;
 }
+
 .itemHoverPadding {
-  border: 1px solid white;
+    border: 1px solid @color-white;
 }
 /*
     Product Details Close Up is placed here
 */
+
 .inside-full-height {
   /*
   // if you want to give content full height give him height: 100%;
@@ -103,9 +130,10 @@ textarea {
   margin-top: 0;
   margin-bottom: 0;
 }
+
 /* columns of same height styles */
 .content {
-  height: 100%;
+    height: 100%;
 }
 .row-height {
   display: table;
@@ -118,6 +146,8 @@ textarea {
   float: none;
   height: 100%;
 }
+
+
 /* Stolen from some site */
 @media (min-width: 768px) {
   .row-sm-height {
@@ -141,6 +171,7 @@ textarea {
     vertical-align: bottom;
   }
 }
+
 /*LESS*/
 .jumbotron {
   padding: 30px;
@@ -149,18 +180,22 @@ textarea {
   font-weight: 200;
   line-height: 2.1428571435;
   color: inherit;
-  background-color: #eeeeee;
+  background-color: @color-jumbotron;
 }
+
 .jumbotron h1 {
   line-height: 1;
   color: inherit;
 }
+
 .jumbotron p {
   line-height: 1.4;
 }
+
 .container .jumbotron {
   border-radius: 6px;
 }
+
 @media screen and (min-width: 768px) {
   .jumbotron {
     padding-top: 48px;
@@ -174,25 +209,36 @@ textarea {
     font-size: 63px;
   }
 }
-#createSave {
-  margin-top: 20px;
+
+#createSave
+ {
+     margin-top : 20px;
+ }
+
+ .field-validation-error
+ {
+     color: @error-color;
+ }
+
+ .btn-primary {
+     background: @color-btn;
+ }
+
+ .input-validation-error {
+     border: 1px solid @error-color;
+ }
+
+ .form-control {
+     margin-top: 10px;
+ }
+
+ .control-label {
+      padding-top: 15px;
+ }
+
+ .dl-horizontal {
+    padding-top: 15px;
+    min-height: 10px;
 }
-.field-validation-error {
-  color: red;
-}
-.btn-primary {
-  background: #0060ac;
-}
-.input-validation-error {
-  border: 1px solid red;
-}
-.form-control {
-  margin-top: 10px;
-}
-.control-label {
-  padding-top: 15px;
-}
-.dl-horizontal {
-  padding-top: 15px;
-  min-height: 10px;
-}
+
+ 
