--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Account/Register.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Account/Register.cshtml
@@ -12,7 +12,7 @@
     <h4>Create a new account.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
-    @Html.Partial("_CreateUpdate")
+    @Html.Partial("_Create")
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
