Search by linq done. only works on product/index

--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Shared/_basketCartView.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Shared/_basketCartView.cshtml
@@ -1,13 +1,12 @@
-﻿
-<nav class="hidden-xs hidden-sm col-md-4 right-nav col-md-push-8 ">
+﻿<nav class="hidden-xs hidden-sm col-md-4 right-nav col-md-push-8 ">
     <div class="nav navbar-right">
-        <a href="~/Basket/Index" class="buyLink">
+        <a href="~/Basket/Buy" class="buyLink" onclick="">
             <ul class="nav">
                 <li>
-                    <div class="row-height testBorder">
+                    <div class="row-height">
                         <!-- Just a Grid Fill Up Box -->
                         <div class="col-sm-8 col-height shoppingCart" id="shoppingCart">
-                            <div class="col-sm-3 inside inside-full-height testBorder basketCounter" style="" id="basketCounter">
+                            <div class="col-sm-3 inside inside-full-height basketCounter" style="" id="basketCounter">
                                 <span class="basketHelper"></span><img class="basketImgCounter" src="~/Images/Icons/BasketCart.png" id="basketImgCounter" />
                             </div>
                             <div class="col-sm-9 basketTotal inside inside-full-height">
