--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Shared/_WebShopLayout.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Shared/_WebShopLayout.cshtml
@@ -26,9 +26,8 @@
                         </a>    
                     </div>
                     <div class="row">
-
-                        <nav class="hidden-xs col-sm-12 text-right top-nav">
-                            <div class="nav navbar-fixed-top pull-right col-xs-7 col-sm-8 col-md-9">
+                        
+                            <div class="nav navbar-static-top pull-right col-xs-7 col-sm-8 col-md-9">
                                 <ul class="nav navbar-nav navbar-right">
                                     <li>@Html.ActionLink("ØNSKELISTE", "Index", "Home")</li>
                                     <li>@Html.ActionLink("KUNDESERVICE", "About", "Home")</li>
@@ -39,7 +38,7 @@
                                     }
                                 </ul>
                             </div>
-                        </nav>
+                        
                         <!-- Partial View on the Shopping Cart -->
                         @Html.Partial("_basketCartView")
                         <div class="hidden-xs hidden-sm col-sm-8 col-md-pull-4">
